# woodchipper

./: .envrc  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG  CONTRIBUTORS  COPYING  MANIFEST.in  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements-demo.in  requirements-demo.txt  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.txt  setup.cfg  tox.ini  woodchipper.py
.github/: CODEOWNERS
.github/workflows/: publish.yml  test.yml
demo/: README.md  app.py  requirements.in  requirements.txt  settings.py  zappa_settings.json
demo/basic_demo/: demo.py
demo/context_demo/: demo.py
demo/http_demo/: app.py  demo.sh
demo/monitor_demo/: demo.py
docs/: _index.md  advanced.md  environment.md  index.md  monitors.md  usage.md
tests/: test_configs.py  test_context.py  test_decorator.py  test_fastapi.py  test_flask.py  test_init.py  test_logger.py  test_processors.py  test_sqlalchemy.py  test_woodchipper.py  utilities.py
woodchipper/: __init__.py  configs.py  context.py  decorator.py  flask.py  lambda.py  logger.py  processors.py  woodchipper.py
woodchipper/http/: awslambda.py  fastapi.py  flask.py  lambda.py
woodchipper/monitors/: __init__.py  sqlalchemy.py
