[metadata]
name = woodchipper
version = 0.4pre
description = Woodchipper is a support library for plugging structured logging into a Python project.
author = Jonathan Demirgian
author_email = jd@tackle.io
url = https://github.com/Quidge/woodchipper
license = LGPLv3
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Environment :: Console
    Topic :: System :: Logging

[options]
packages = find:
include_package_data = True
install_requires =
    structlog>=21.5.0
python_requires = >=3.6
