[metadata]
name = woodchipper
version = 0.6
description = Woodchipper is a support library for plugging structured logging into a Python project.
author = Tackle.io, Inc.
url = https://github.com/tackle-io/woodchipper
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Environment :: Console
    Topic :: System :: Logging

[options]
packages = find:
include_package_data = True
install_requires =
    structlog>=21.5.0
python_requires = >=3.6
